Adapted to new Mollier model

--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -263,6 +263,7 @@
     <Compile Include="Interface\IUserVisibilitySetting.cs" />
     <Compile Include="Interface\IVisibilitySetting.cs" />
     <Compile Include="Modify\AddColorPoint.cs" />
+    <Compile Include="Modify\RegroupProcesses.cs" />
     <Compile Include="Modify\AddLinesSeries.cs" />
     <Compile Include="Modify\AddMollierProcesses.cs" />
     <Compile Include="Modify\AddDivisionArea.cs" />
