Created summary and fixed groups

--- a/Grasshopper/SAM.Core.Mollier.UI.Grasshopper/SAM.Core.Mollier.UI.Grasshopper.csproj
+++ b/Grasshopper/SAM.Core.Mollier.UI.Grasshopper/SAM.Core.Mollier.UI.Grasshopper.csproj
@@ -75,6 +75,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Query\MollierObjects.cs" />
     <Compile Include="Query\MollierPoints.cs" />
     <Compile Include="Query\MollierProcesses.cs" />
     <Compile Include="Component\SAMMollierCreateAdiabaticHumidificationProcessByHumidityRatioDifference.cs" />
