--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -106,6 +106,8 @@
     <Compile Include="Classes\Modification\AnalyticalModelModification.cs" />
     <Compile Include="Classes\Settings\BoundaryTypeAppearanceSettings.cs" />
     <Compile Include="Classes\Settings\AdjacencyClusterAppearanceSettings.cs" />
+    <Compile Include="Classes\Settings\CoolingSystemAppearanceSettings.cs" />
+    <Compile Include="Classes\Settings\HeatingSystemAppearanceSettings.cs" />
     <Compile Include="Classes\Settings\VentilationSystemAppearanceSettings.cs" />
     <Compile Include="Classes\Settings\OpeningPropertiesAppearanceSettings.cs" />
     <Compile Include="Classes\Settings\ApertureConstructionAppearanceSettings.cs" />
