--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -274,6 +274,7 @@
     <Compile Include="Modify\SetParameterValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\GroupName.cs" />
+    <Compile Include="Query\SortGroup.cs" />
     <Compile Include="Query\SortByGroup.cs" />
     <Compile Include="Query\DivisionMollierZones.cs" />
     <Compile Include="Query\Obstacles.cs" />
