--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -151,6 +151,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Modify\AddMechanicalSystems.cs" />
     <Compile Include="Windows\AddMechanicalSystemsWindow.xaml.cs">
       <DependentUpon>AddMechanicalSystemsWindow.xaml</DependentUpon>
     </Compile>
