ContexMenu Updated with Remove Options

--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -152,6 +152,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Modify\AddMechanicalSystems.cs" />
+    <Compile Include="Modify\RemoveMechanicalSystems.cs" />
+    <Compile Include="Modify\RemoveZones.cs" />
     <Compile Include="Windows\AddMechanicalSystemsWindow.xaml.cs">
       <DependentUpon>AddMechanicalSystemsWindow.xaml</DependentUpon>
     </Compile>
