--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Classes\Settings\AdjacencyClusterAppearanceSettings.cs" />
     <Compile Include="Classes\Settings\CoolingSystemAppearanceSettings.cs" />
     <Compile Include="Classes\Settings\HeatingSystemAppearanceSettings.cs" />
+    <Compile Include="Classes\Settings\NCMDataAppearanceSettings.cs" />
     <Compile Include="Classes\Settings\VentilationSystemAppearanceSettings.cs" />
     <Compile Include="Classes\Settings\OpeningPropertiesAppearanceSettings.cs" />
     <Compile Include="Classes\Settings\ApertureConstructionAppearanceSettings.cs" />
