--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -154,6 +154,12 @@
     <Compile Include="Modify\AddMechanicalSystems.cs" />
     <Compile Include="Modify\RemoveMechanicalSystems.cs" />
     <Compile Include="Modify\RemoveZones.cs" />
+    <Compile Include="Controls\NCMNameCollectionControl.xaml.cs">
+      <DependentUpon>NCMNameCollectionControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\NCMNameCollectionWindow.xaml.cs">
+      <DependentUpon>NCMNameCollectionWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\AddMechanicalSystemsWindow.xaml.cs">
       <DependentUpon>AddMechanicalSystemsWindow.xaml</DependentUpon>
     </Compile>
@@ -337,6 +343,9 @@
     <PackageReference Include="HoneybeeSchema">
       <Version>1.51.5.1</Version>
     </PackageReference>
+    <PackageReference Include="NetTopologySuite">
+      <Version>2.5.0</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.2</Version>
     </PackageReference>
@@ -470,6 +479,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Controls\NCMNameCollectionControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\NCMNameCollectionWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\AddMechanicalSystemsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
