--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -151,6 +151,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\NCMNameCollectionOptions.cs" />
     <Compile Include="Modify\AddMechanicalSystems.cs" />
     <Compile Include="Modify\RemoveMechanicalSystems.cs" />
     <Compile Include="Modify\RemoveZones.cs" />
