Adjust geometry object model and room process

--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -270,6 +270,7 @@
     <Compile Include="Modify\AddLabels.cs" />
     <Compile Include="Modify\SetParameterValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\CornerPoints.cs" />
     <Compile Include="Query\GroupName.cs" />
     <Compile Include="Query\SortGroup.cs" />
     <Compile Include="Query\SortByGroup.cs" />
