--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -686,5 +686,8 @@
   <ItemGroup>
     <None Include="Resources\SAM_Section.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SAM_PartL.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
