--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -109,6 +109,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\SAM_Tas\build\SAM.Core.Tas.dll</HintPath>
     </Reference>
+    <Reference Include="SAM.Core.Tas.UKBR, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SAM_Tas\build\SAM.Core.Tas.UKBR.dll</HintPath>
+    </Reference>
     <Reference Include="SAM.Core.Windows, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\SAM_Windows\build\SAM.Core.Windows.dll</HintPath>
@@ -162,6 +166,7 @@
     <Compile Include="Controls\NCMDataControl.xaml.cs">
       <DependentUpon>NCMDataControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Modify\UpdateUKBRFile.cs" />
     <Compile Include="Windows\NCMDataWindow.xaml.cs">
       <DependentUpon>NCMDataWindow.xaml</DependentUpon>
     </Compile>
