--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -155,9 +155,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\DisplayLayerThicknessCalculationResult.cs" />
     <Compile Include="Classes\NCMNameCollectionOptions.cs" />
     <Compile Include="Controls\LayerThicknessCalculationDataControl.xaml.cs">
       <DependentUpon>LayerThicknessCalculationDataControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="LayerThicknessCalculationResultsWindow.xaml.cs">
+      <DependentUpon>LayerThicknessCalculationResultsWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Modify\ThermalTransmittanceCalculator.cs" />
     <Compile Include="Windows\ThermalTransmittanceCalculatorWindow.xaml.cs">
@@ -518,6 +522,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\ThermalTransmittanceCalculatorControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="LayerThicknessCalculationResultsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
