Updates on ThermalTransmittanceCalculator

--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -157,12 +157,17 @@
   <ItemGroup>
     <Compile Include="Classes\DisplayLayerThicknessCalculationResult.cs" />
     <Compile Include="Classes\NCMNameCollectionOptions.cs" />
+    <Compile Include="Modify\ThermalTransmittanceCalculator_SingleConstruction.cs" />
+    <Compile Include="Windows\ConstructionCalculationDataWindow.xaml.cs">
+      <DependentUpon>ConstructionCalculationDataWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\ConstructionCalculationDataControl.xaml.cs">
       <DependentUpon>ConstructionCalculationDataControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\LayerThicknessCalculationDataControl.xaml.cs">
       <DependentUpon>LayerThicknessCalculationDataControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Enums\ConstructionCalculationType.cs" />
     <Compile Include="Windows\LayerThicknessCalculationResultsWindow.xaml.cs">
       <DependentUpon>LayerThicknessCalculationResultsWindow.xaml</DependentUpon>
     </Compile>
@@ -512,6 +517,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Windows\ConstructionCalculationDataWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\ConstructionCalculationDataControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
